--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
+    "lucide-react-native": "^0.553.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.1",
@@ -30,7 +31,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-svg": "^15.14.0",
-    "react-native-vector-icons": "^10.3.0",
+    "react-native-svg-transformer": "^1.5.2",
     "react-native-worklets": "^0.6.1",
     "react-redux": "^9.2.0",
     "victory-native": "^41.20.2"
