--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
     "@reduxjs/toolkit": "^2.10.1",
+    "@shopify/react-native-skia": "^2.3.12",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "lucide-react-native": "^0.553.0",
@@ -28,6 +29,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.1.5",
