--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.1.5",
