--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hugeicons/core-free-icons": "^1.2.1",
     "@hugeicons/react-native": "^1.0.7",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/native": "^7.1.19",
@@ -38,9 +39,11 @@
     "react-native-screens": "^4.18.0",
     "react-native-svg": "^15.15.0",
     "react-native-svg-transformer": "^1.5.2",
+    "react-native-uuid": "^2.0.3",
     "react-native-worklets": "^0.6.1",
     "react-redux": "^9.2.0",
-    "victory-native": "^41.20.2"
+    "victory-native": "^41.20.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
