--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^15.15.0",
     "react-native-svg-transformer": "^1.5.2",
     "react-native-uuid": "^2.0.3",
